fixed some spacing

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -87,6 +87,8 @@ body {
 
 .page__content {
   padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
 
   h2 {
     padding-bottom: 0.5em;
