--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -25,7 +25,7 @@ $sidebar-color: linear-gradient(0.25turn, #78c3e3, #afdbde);
 //$gradient-color: linear-gradient(90deg, #FFC0CB 20%, #5bffff 80%) !default;
 $gradient-color: linear-gradient(0.25turn, #78c3e3, #ebf8e1, #FFC0CB);
 $text-color: #000000 !default;
-$primary-color: #1bc700 !default;
+$primary-color: #000000 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
